--- a/public/index.html
+++ b/public/index.html
@@ -5,37 +5,31 @@
     <meta charset="UTF-8">
     <title>Glimmer Hub</title>
 
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    
     <style>
         body {
             padding-top: 50px;
+            padding-left: 50px;
+            padding-right: 50px;
         }
     </style>
 </head>
 
 <body>
+    <h1>Glimmer Hub</h1>
 
-    <div class="container">
-        <div class="jumbotron">
-            <h1>About Glimmer Hub</h1>
-        </div>
-        <p></p>
-    </div>
-
-
-   
-
-    <h3>Weather</h1>
+    <h3>Weather</h3>
     <p><a
             href="http://glimmerhub.com/weather/image/lat/42.36/lon/-71.06/title/Boston%20Forecast">http://glimmerhub.com/weather/image/lat/42.36/lon/-71.06/title/Boston%20Forecast</a>
     </p>
-    <p>
-        <o:p>&nbsp;</o:p>
-    </p>
-    <h3>Baseball</h1>
+    
+    <h3>Baseball</h3>
     <p><a href="http://glimmerhub/baseball/image/team/BOS">http://glimmerhub/baseball/image/team/BOS</a></p>
     <p>Replace “BOS” with any other MLB team abbreviation</p>
 
 </body>
-
 </html>
